@@ -25,6 +25,7 @@ import org.apache.tajo.catalog.partition.PartitionDesc;
 import org.apache.tajo.catalog.proto.CatalogProtos;
 import org.apache.tajo.common.ProtoObject;
 import org.apache.tajo.json.GsonObject;
+import org.apache.tajo.util.KeyValueSet;
 
 import static org.apache.tajo.catalog.proto.CatalogProtos.AlterTableDescProto;
 
@@ -44,10 +45,16 @@ public class AlterTableDesc implements ProtoObject<AlterTableDescProto>, GsonObj
   protected Column addColumn = null; //optional
   @Expose
   protected PartitionDesc partitionDesc; //optional
+  @Expose
+  protected KeyValueSet properties;
 
   public AlterTableDesc() {
+    init();
   }
 
+  private void init() {
+    this.properties = new KeyValueSet();
+  }
 
   public String getTableName() {
     return tableName;
@@ -101,6 +108,22 @@ public class AlterTableDesc implements ProtoObject<AlterTableDescProto>, GsonObj
 
   public void setPartitionDesc(PartitionDesc partitionDesc) { this.partitionDesc = partitionDesc; }
 
+  public void setProperties(KeyValueSet properties) {
+    this.properties = properties;
+  }
+
+  public KeyValueSet getProperties() {
+    return properties;
+  }
+
+  public void setProperty(String key, String value) {
+    this.properties.set(key, value);
+  }
+
+  public String getProperty(String key) {
+    return this.properties.get(key);
+  }
+
   @Override
   public String toString() {
     Gson gson = new GsonBuilder().setPrettyPrinting().
@@ -117,6 +140,7 @@ public class AlterTableDesc implements ProtoObject<AlterTableDescProto>, GsonObj
     newAlter.columnName = newColumnName;
     newAlter.addColumn = addColumn;
     newAlter.partitionDesc = partitionDesc;
+    newAlter.properties = (KeyValueSet)properties.clone();
     return newAlter;
   }
 
@@ -144,6 +168,9 @@ public class AlterTableDesc implements ProtoObject<AlterTableDescProto>, GsonObj
     if (null != this.addColumn) {
       builder.setAddColumn(addColumn.getProto());
     }
+    if (null != this.properties) {
+      builder.setParams(properties.getProto());
+    }
 
     switch (alterTableType) {
       case RENAME_TABLE:
@@ -154,6 +181,9 @@ public class AlterTableDesc implements ProtoObject<AlterTableDescProto>, GsonObj
         break;
       case ADD_COLUMN:
         builder.setAlterTableType(CatalogProtos.AlterTableType.ADD_COLUMN);
+        break;
+      case SET_PROPERTY:
+        builder.setAlterTableType(CatalogProtos.AlterTableType.SET_PROPERTY);
         break;
       case ADD_PARTITION:
         builder.setAlterTableType(CatalogProtos.AlterTableType.ADD_PARTITION);
