@@ -646,6 +646,9 @@ public class HCatalogStore extends CatalogConstants implements CatalogStore {
         }
         dropPartition(databaseName, tableName, partitionDesc);
         break;
+      case SET_PROPERTY:
+        // TODO - not implemented yet
+        break;
       default:
         //TODO
     }
