@@ -28,6 +28,7 @@ import org.apache.hadoop.fs.Path;
 import org.apache.tajo.TajoConstants;
 import org.apache.tajo.catalog.CatalogUtil;
 import org.apache.tajo.catalog.FunctionDesc;
+import org.apache.tajo.catalog.TableMeta;
 import org.apache.tajo.catalog.exception.*;
 import org.apache.tajo.catalog.partition.PartitionDesc;
 import org.apache.tajo.catalog.proto.CatalogProtos;
@@ -41,6 +42,7 @@ import org.apache.tajo.catalog.proto.CatalogProtos.TableOptionProto;
 import org.apache.tajo.catalog.proto.CatalogProtos.TablePartitionProto;
 import org.apache.tajo.catalog.proto.CatalogProtos.TableStatsProto;
 import org.apache.tajo.rpc.protocolrecords.PrimitiveProtos.KeyValueProto;
+import org.apache.tajo.util.KeyValueSet;
 import org.apache.tajo.util.TUtil;
 
 import java.io.IOException;
@@ -349,6 +351,20 @@ public class MemStore implements CatalogStore {
         } else {
           partitions.remove(partitionName);
         }
+        break;
+      case SET_PROPERTY:
+        KeyValueSet properties = new KeyValueSet(tableDescProto.getMeta().getParams());
+        KeyValueSet newProperties = new KeyValueSet(alterTableDescProto.getParams());
+
+        for (String key : newProperties.getAllKeyValus().keySet()) {
+          if (properties.containsKey(key))
+            properties.remove(key);
+          properties.set(key, newProperties.get(key));
+        }
+
+        TableMeta newMeta = new TableMeta(tableDescProto.getMeta().getStoreType(), properties);
+        newTableDescProto = tableDescProto.toBuilder().setMeta(newMeta.getProto()).build();
+        database.put(tableName, newTableDescProto);
         break;
       default:
     }
