@@ -995,6 +995,17 @@ public class TestCatalog {
     TableDesc addColumnDesc = catalog.getTableDesc("default","mynewcooltable");
     assertTrue(addColumnDesc.getSchema().containsByName("mynewcol"));
 
+    //SET_PROPERTY
+    TableDesc setPropertyDesc = catalog.getTableDesc("default","mynewcooltable");
+    KeyValueSet options = new KeyValueSet();
+    options.set("timezone", "GMT+9");   // Seoul, Korea
+    setPropertyDesc.setMeta(new TableMeta(StoreType.CSV, options));
+    String prevTimeZone = setPropertyDesc.getMeta().getOption("timezone");
+    String newTimeZone = "GMT-7";       // Silicon Valley, California
+    catalog.alterTable(createMockAlterTableSetProperty(newTimeZone));
+    setPropertyDesc = catalog.getTableDesc("default","mynewcooltable");
+    assertNotEquals(prevTimeZone, setPropertyDesc.getMeta().getOption("timezone"));
+    assertEquals(newTimeZone, setPropertyDesc.getMeta().getOption("timezone"));
   }
 
   private AlterTableDesc createMockAlterTableName(){
@@ -1019,6 +1030,14 @@ public class TestCatalog {
     alterTableDesc.setTableName("default.mynewcooltable");
     alterTableDesc.setAddColumn(new Column("mynewcol", Type.TEXT));
     alterTableDesc.setAlterTableType(AlterTableType.ADD_COLUMN);
+    return alterTableDesc;
+  }
+
+  private AlterTableDesc createMockAlterTableSetProperty(String newTimeZone) {
+    AlterTableDesc alterTableDesc = new AlterTableDesc();
+    alterTableDesc.setTableName("default.mynewcooltable");
+    alterTableDesc.setProperty("timezone", newTimeZone);
+    alterTableDesc.setAlterTableType(AlterTableType.SET_PROPERTY);
     return alterTableDesc;
   }
 
