@@ -280,6 +280,7 @@ PERCENT_RANK : P E R C E N T UNDERLINE R A N K;
 PRECEDING : P R E C E D I N G;
 PRECISION : P R E C I S I O N;
 PURGE : P U R G E;
+PROPERTY : P R O P E R T Y;
 
 QUARTER : Q U A R T E R;
 
