@@ -1,0 +1,1 @@
+ALTER TABLE ALTX SET PROPERTY 'text.delimiter'='|';
