@@ -1,0 +1,1 @@
+ALTER TABLE ALTY SET PROPERTY 'timezone'='GMT-7';
