@@ -1,0 +1,1 @@
+ALTER TABLE table1 SET PROPERTY 'text.delimiter' = '&'
